# unifi-mgr

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELEASE-NOTES-v0.1.0.md  RELEASE-NOTES-v0.1.1.md  RELEASE-NOTES-v0.1.2.md  RELEASE-NOTES-v0.1.3.md  RELEASE-NOTES-v0.1.4.md  RELEASE-NOTES-v0.1.5.md  RELEASE-NOTES-v0.1.6.md  RELEASE-NOTES-v0.1.7.md  config.yaml.example  constraints.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  INSTALL.md  ROADMAP.md  refactor-status.md
docs/specs/: 2026-05-18-report-module-design.md  2026-06-14-notifyservice-design.md  2026-06-23-domain-normalization-context.md  notifyservice-implementation-plan.md
docs/superpowers/plans/: 2026-05-16-phase-0-foundation.md  2026-05-16-phase-1-core-layers.md  2026-05-16-phase-2-services-integrations.md  2026-05-17-phase-3-restart-service.md  2026-05-18-phase-4-cli-complete.md  2026-05-21-phase-5-cron-switch.md  2026-05-21-phase-6-cleanup.md  2026-05-26-phase-4.5-security-hardening.md  2026-05-27-phase-4.6-deploy-contract-hardening.md
docs/superpowers/specs/: 2026-05-16-unifi-manager-refactor-design.md  2026-05-18-unifi-manager-report-module-design.md
scripts/: build-bundle.py  dashboard.sh  deploy.sh  forgejo_release.py  install-production.sh  observe.sh  pytest-fast.bat  pytest-fast.py  verify-deployment.sh
src/unifi_manager/: __init__.py  logging_config.py  settings.py
src/unifi_manager/cli/: __init__.py  _common.py  audit.py  config.py  export.py  legacy.py  login.py  main.py  notify.py  restart.py  zabbix.py
src/unifi_manager/clients/: __init__.py  base.py  exceptions.py  integration.py  legacy.py
src/unifi_manager/diagnostics/: __init__.py
src/unifi_manager/domain/: __init__.py  client.py  device.py  event.py  restart_history.py
src/unifi_manager/integrations/: __init__.py  telegram.py  zabbix.py
src/unifi_manager/services/: __init__.py  audit.py  export.py  lock.py  notify.py  restart.py  restart_decisions.py
src/unifi_manager/utils/: __init__.py  atomic.py  redact.py  time.py
tests/: conftest.py
tests/fixtures/: ap_event_sample.json  audit_critical_sample.json  integration_devices.json  mac_duplicates_sample.json  problematic_devices.json  restart_history_legacy.json  restart_history_new.json  settings_full.yaml  settings_minimal.yaml  stat_device_response.json  telegram_send_response.json  trends_report_day1.txt  trends_report_day2.txt  zabbix_lld_expected.json
tests/unit/: test_example_configs.py  test_logging.py  test_package_imports.py  test_settings.py
tests/unit/test_cli/: conftest.py  test_audit.py  test_common.py  test_config.py  test_export.py  test_legacy.py  test_login.py  test_main.py  test_notify.py  test_output_encoding.py  test_restart.py  test_zabbix.py
tests/unit/test_clients/: test_base.py  test_exceptions.py  test_integration.py  test_legacy.py
tests/unit/test_domain/: test_client.py  test_device.py  test_event.py  test_restart_history.py
tests/unit/test_integrations/: test_telegram.py  test_zabbix.py
tests/unit/test_services/: conftest.py  test_audit.py  test_export.py  test_lock.py  test_notify.py  test_restart.py  test_restart_decisions.py
tests/unit/test_utils/: test_atomic.py  test_redact.py  test_time.py
